fixed tchat and overflow

--- a/front/src/css/chatBody.css
+++ b/front/src/css/chatBody.css
@@ -3,6 +3,7 @@
     padding: 10px;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
     gap: 10px;
     flex: 85%;
     align-self: stretch;
@@ -11,7 +12,7 @@
 .chat-messages{
     display: flex;
     padding: 10px;
-    flex-direction: column;
+    flex-direction: column-reverse;
     align-items: flex-start;
     gap: 10px;
     align-self: stretch;
