--- a/front/src/css/main.css
+++ b/front/src/css/main.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+body {
+    overflow: hidden;
+}
+
 #root {
     display: flex;
     padding: 10px;
